Fixed spacing issue

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,6 +1,6 @@
 window#waybar {
     font-family: "JetBrains Mono NerdFont";
-    background-color: rgba(0,0,0,0);
+    background-color: rgba(0, 0, 0, 0);
     color: rgb(230, 230, 230);
     font-size: 1.2rem;
     border-radius: 0.5rem;
@@ -11,7 +11,7 @@ tooltip {
     font-size: 0.8rem;
 }
 
-.modules-left{
+.modules-left {
     background: linear-gradient(315deg, rgba(145, 0, 135, 0.4), rgba(79, 0, 116, 0.6));
     border-radius: 0.5rem;
     padding: 3px;
@@ -32,7 +32,7 @@ tooltip {
 
 
 #image.powermenu {
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0, 0, 0, 0.3);
     border-radius: 0.5rem;
     padding: 0px 10px;
     border-left: 10px;
@@ -40,10 +40,8 @@ tooltip {
 
 
 #workspaces {
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 0.5rem;
-    margin-left: 3px;
-    margin-right: 3px;
     padding: 0 5px;
 }
 
@@ -54,7 +52,7 @@ tooltip {
 }
 
 #workspaces button:hover {
-    background-color: rgba(0,0,0,1);
+    background-color: rgba(0, 0, 0, 1);
 }
 
 #workspaces button.special {
@@ -71,45 +69,45 @@ tooltip {
 }
 
 #window, #waybar-media {
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0, 0, 0, 0.3);
     border-radius: 0.5rem;
     padding: 2px 5px;
 }
 
-#custom-lightdarkmode{
+#custom-lightdarkmode {
     padding-right: 7px;
 }
 
 #custom-media {
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0, 0, 0, 0.3);
     border-radius: 0.5rem;
     padding: 2px 5px;
 }
 
-#tray{
+#tray {
     background-color: rgba(0, 0, 0, 0.118);
     border-radius: 0.5rem;
     padding: 2px 5px;
 }
 
-#clock.time, #clock.date{
-    font-weight:600
+#clock.time, #clock.date {
+    font-weight: 600
 }
 
-#wireplumber, #custom-lights, #network, #custom-lightdarkmode{
+#wireplumber, #custom-lights, #network, #custom-lightdarkmode {
     margin-left: 6px;
     margin-right: 6px;
 }
 
-#wireplumber{
+#wireplumber {
     font-size: 16;
 }
 
-#custom-seperator{
+#custom-seperator {
     font-size: 30;
 }
 
-#custom-space{
+#custom-space {
     font-size: 10;
 }
 
